--- a/Src/Zing.Core/packages.config
+++ b/Src/Zing.Core/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Bcl" version="1.1.3" targetFramework="net40" />
-  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net40" />
-  <package id="Microsoft.Net.Http" version="2.2.13" targetFramework="net40" />
+  <package id="FluentNHibernate" version="2.0.3.0" targetFramework="net46" />
+  <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net46" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net40" requireReinstallation="true" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net46" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net40" requireReinstallation="true" />
+  <package id="NHibernate" version="4.0.4.4000" targetFramework="net46" />
 </packages>
