--- a/Src/Zing/packages.config
+++ b/Src/Zing/packages.config
@@ -2,22 +2,26 @@
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net40" />
   <package id="Autofac.Configuration" version="3.3.0" targetFramework="net40" />
-  <package id="Autofac.Mvc4" version="3.1.0" targetFramework="net40" />
-  <package id="AutoMapper" version="3.3.0" targetFramework="net40" />
-  <package id="Castle.Core" version="3.3.0" targetFramework="net40" />
-  <package id="Castle.Windsor" version="3.2.1" targetFramework="net40" />
-  <package id="FluentNHibernate" version="1.4.0.0" targetFramework="net40" />
-  <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net40" />
-  <package id="JetBrains.Annotations" version="7.0" targetFramework="net40" />
-  <package id="log4net" version="2.0.3" targetFramework="net40" />
-  <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net40" />
-  <package id="Microsoft.Bcl" version="1.1.3" targetFramework="net40" />
-  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net40" />
-  <package id="Microsoft.Net.Http" version="2.2.13" targetFramework="net40" />
+  <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net46" />
+  <package id="AutoMapper" version="4.1.1" targetFramework="net46" />
+  <package id="Castle.Core" version="3.3.3" targetFramework="net46" />
+  <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
+  <package id="FluentNHibernate" version="2.0.3.0" targetFramework="net46" />
+  <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net46" />
+  <package id="JetBrains.Annotations" version="10.0.0" targetFramework="net46" />
+  <package id="log4net" version="2.0.5" targetFramework="net46" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net46" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net46" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net46" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net46" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net40" />
-  <package id="NHibernate" version="4.0.2.4000" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net46" />
+  <package id="NHibernate" version="4.0.4.4000" targetFramework="net46" />
   <package id="NHibernate.Linq" version="1.0" targetFramework="net40" />
 </packages>
