--- a/Src/Zing.Web/packages.config
+++ b/Src/Zing.Web/packages.config
@@ -4,7 +4,8 @@
   <package id="Autofac" version="3.5.2" targetFramework="net40" />
   <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net46" />
   <package id="AutoMapper" version="4.1.1" targetFramework="net46" />
-  <package id="font-awesome" version="4.4.0" targetFramework="net46" />
+  <package id="bootstrap" version="3.0.0" targetFramework="net46" />
+  <package id="jQuery" version="1.10.2" targetFramework="net46" />
   <package id="log4net" version="2.0.5" targetFramework="net46" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net46" />
@@ -16,8 +17,11 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net46" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net46" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.1" targetFramework="net461" />
+  <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net46" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
+  <package id="Modernizr" version="2.6.2" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net46" />
   <package id="WebActivatorEx" version="2.1.0" targetFramework="net46" />
   <package id="WebGrease" version="1.6.0" targetFramework="net46" />
