--- a/Src/Zing.Web/Modules/Zing.Module/Zing.Modules.csproj
+++ b/Src/Zing.Web/Modules/Zing.Module/Zing.Modules.csproj
@@ -106,6 +106,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\RecordEntry.cs" />
+    <Compile Include="Order\Models\OrderDetailEntity.cs" />
+    <Compile Include="Order\Models\OrderEntity.cs" />
+    <Compile Include="Order\Services\IOrderService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Users\Models\UserEntity.cs" />
     <Compile Include="Users\Models\UserStatus.cs" />
@@ -113,6 +116,7 @@
     <Compile Include="Users\Repositories\MembershipRepository.cs" />
     <Compile Include="Users\Services\IMembershipServiceInModule.cs" />
     <Compile Include="Users\Services\MembershipService.cs" />
+    <Compile Include="Order\Services\OrderService.cs" />
     <Compile Include="Users\UsersModule.cs" />
     <Compile Include="Users\ViewModels\UserViewModel.cs" />
     <Compile Include="ViewFilter\DefaultFilterFormater.cs" />
@@ -130,6 +134,10 @@
       <Project>{9b0546ff-2871-4e97-8448-bb3ad038f0fa}</Project>
       <Name>Zing.Framework</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Order\Repositories\" />
+    <Folder Include="Order\ViewModels\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
